--- a/style.css
+++ b/style.css
@@ -517,7 +517,7 @@ input[type='checkbox'] {
 }
 /* Page6. */
 #page6 {
-    min-height: 40vh;
+    height: 40vh;
     width: 100%;
     background-color: #e8e9e1c5;
 }
